# mayhem-mandrill

./: README.md  pyproject.toml
mayhem_mandrill/: mayhem.py  mayhem_1.py  mayhem_2.py  non_concurrent_mayhem.py
mayhem_mandrill/part_0/: mayhem_1.py  mayhem_3.py  mayhem_4.py
mayhem_mandrill/part_1/: mayhem_2.py
