[tool.poetry]
name = "mayhem-mandrill"
version = "0.1.0"
description = ""
authors = ["Shaan Savarirayan <shaan.savarirayan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
attrs = "^21.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
mayhem_1 = "mayhem_mandrill.part_0.mayhem_1:main"
mayhem_2 = "mayhem_mandrill.part_0.mayhem_2:main"
mayhem_3 = "mayhem_mandrill.part_0.mayhem_3:main"
mayhem_4 = "mayhem_mandrill.part_0.mayhem_4:main"
non_concurrent = "mayhem_mandrill.part_0.non_concurrent_mayhem:main"
concurrent = "mayhem_mandrill.part_1.mayhem_5:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
