[tool.poetry]
name = "mayhem-mandrill"
version = "0.1.0"
description = ""
authors = ["Shaan Savarirayan <shaan.savarirayan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
attrs = "^21.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
0_1 = "mayhem_mandrill.part_0.mayhem_1:main"
0_2 = "mayhem_mandrill.part_0.mayhem_2:main"
0_3 = "mayhem_mandrill.part_0.mayhem_3:main"
0_4 = "mayhem_mandrill.part_0.mayhem_4:main"
1_1 = "mayhem_mandrill.part_1.mayhem_1:main"
1_2 = "mayhem_mandrill.part_1.mayhem_2:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
